<resources>
    <string name="app_name">TuServicio Hogar</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">TuServicio Hogar</string>
    <string name="nav_header_subtitle">Servicios a domicilio</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Servicios</string>
    <string name="menu_slideshow">Mi Perfil</string>
</resources>